Changes in version 1.3.2

o UPDATE: faster conversion between US and UK spellings


Changes in version 1.3.1

o UPDATE: `textcleaner` now allows for either UK or US English spelling

o FIX: `correct.changes` did not like vectors (see GitHub Issue #4)

o FIX: bug for BAD STRING option in `textcleaner` fixed (see GitHub Issue #5)

o UPDATE: new output and message for dictionary and monikers in `textcleaner`

o FIX: bug for moniker check when `dictionary = "general"` in `textcleaner` (see GitHub Issue #7)

o UPDATE: internal adjustment for parsing multiple words with the general dictionary (speeds up process)

o ADD: preprocessing data from SemNA tutorial (`open.preprocess`)


Changes in version 1.3.0

o ADD: function to convert cleaned data to the SNAFU library's format in Python: `convert2snafu`

o UPDATE: `correct.changes` included within `textcleaner` to streamline code for single function preprocessing

o UPDATE: `edit` function added within the `correct.changes` function to allow more seamless interface

o UPDATE: change tracking has been added to `correct.changes` in the output (`$spellcheck$changes`)

o UPDATE: `textcleaner`'s help is now more helpful

o UPDATE: text styling (face and color) are now adaptive to OS, software (R and RStudio), and RStudio theme


Changes in version 1.2.0

o **MAJOR UPDATE**: overhauled `textcleaner` and `correct.changes` system to be more functionally efficient, convenient, and aesthetically intuitive

o ADD: a walkthrough has been added prior to the manual spell-check in `textcleaner`

o ADD: a help option has been added to `textcleaner`

o UPDATE: error catching added to `textcleaner` and `correct.changes` so not all is lost (data up to error will be saved and returned)

o MOVE: `equate` and `finalize` moved from SemNetCleaner to SemNeT

o UPDATE: moved many miscellaneous functions to internals to clean up package presentation

o UPDATE: cleaned up textcleaner code to be more streamlined and readable
