@@ -57,6 +57,7 @@
 #' 
 #' @export
 #Singularize
+# Updated 01.01.2021
 singularize <- function(word)
 {
     #check for multiple words
@@ -87,60 +88,28 @@ singularize <- function(word)
                    feet = "foot",
                    mice = "mouse",
                    people = "person",
-                   lice = "louse")
+                   lice = "louse",
+                   valves = "valve",
+                   trees = "tree",
+                   scribbles = "scribble",
+                   peduncles = "peduncle",
+                   mallees = "mallee",
+                   panicles = "panicle",
+                   ridges = "ridge",
+                   petioles = "petiole",
+                   angles = "angle",
+                   bristles = "bristle",
+                   edges = "edge",
+                   fissures = "fissure",
+                   sutures = "suture",
+                   occurrences = "occurrence",
+                   bees = "bee")
     
     if(is.null(word))
     {word <- orig.word
     }else{chn <- TRUE}
     
     #identify common plurals
-    ## last letter
-    last.lets <- substr(word,nchar(word),nchar(word))
-    
-    if(!chn)
-    {
-        if(any(last.lets == c("s","i","a")))
-        {
-            if(last.lets == "s")
-            {
-                #remove 's'
-                word <- substr(word,1,nchar(word)-1)
-            }else if(last.lets == "i")
-            {
-                #remove 'i'
-                word <- substr(word,1,nchar(word)-1)
-                #add 'us'
-                word <- paste(word,"us",sep="",collapse="")
-            }else if(last.lets == "a")
-            {
-                #remove 'a'
-                word <- substr(word,1,nchar(word)-1)
-                #add 'on'
-                word <- paste(word,"on",sep="",collapse="")
-            }
-        }
-    }
-    
-    ## last two letters
-    last.lets <- substr(word,nchar(word)-1,nchar(word))
-    
-    if(!chn)
-    {
-        if(last.lets == "es")
-        {
-            #remove 'es'
-            word <- substr(word,1,nchar(word)-2)
-            
-            if(!word %in% checker)
-            {
-                #add 'is'
-                word <- paste(word,"is",sep="",collapse="")
-            }
-            
-            chn <- TRUE
-        }
-    }
-    
     ## last three letters
     last.lets <- substr(word,nchar(word)-2,nchar(word))
     
@@ -192,6 +161,55 @@ singularize <- function(word)
                 }
             }
         }
+    }
+    
+    ## last two letters
+    last.lets <- substr(word,nchar(word)-1,nchar(word))
+    
+    if(!chn)
+    {
+        if(last.lets == "es")
+        {
+            #remove 'es'
+            word <- substr(word,1,nchar(word)-2)
+            
+            if(!word %in% checker)
+            {
+                #add 'is'
+                word <- paste(word,"is",sep="",collapse="")
+            }
+            
+            chn <- TRUE
+        }
+        
+    }
+    
+    ## last letter
+    last.lets <- substr(word,nchar(word),nchar(word))
+    
+    if(!chn)
+    {
+        if(any(last.lets == c("s","i","a")))
+        {
+            if(last.lets == "s")
+            {
+                #remove 's'
+                word <- substr(word,1,nchar(word)-1)
+            }else if(last.lets == "i")
+            {
+                #remove 'i'
+                word <- substr(word,1,nchar(word)-1)
+                #add 'us'
+                word <- paste(word,"us",sep="",collapse="")
+            }else if(last.lets == "a")
+            {
+                #remove 'a'
+                word <- substr(word,1,nchar(word)-1)
+                #add 'on'
+                word <- paste(word,"on",sep="",collapse="")
+            }
+        }
+        
     }
     
     #return word
